--- a/resources/assets/sass/layout/_sidebar.scss
+++ b/resources/assets/sass/layout/_sidebar.scss
@@ -58,7 +58,7 @@
     }
 
     @include breakpoint(large) {
-      flex: 1;
+      flex: none;
       max-width: 100%;
     }
   }
